--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "agro_elites",
   "version": "0.1.0",
   "private": true,
+  "type":"module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,9 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.11"
+    "next": "14.2.11",
+    "react": "^18.3.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
     "postcss": "^8",
