--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^8.7.1",
     "next": "14.2.11",
     "react": "^18.3.1",
     "react-dom": "^18",
