--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@mui/styles": "^6.1.4",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "firebase": "^10.12.4",
